Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,53 +20,17 @@ strategy:
       python.version: '3.7'
 
 steps:
-    - task: UsePythonVersion@0
-       inputs:
-         versionSpec: '$(pythonVersion)'
-         displayName: 'Use Python $(pythonVersion)'
-    - script: |
-         python -m venv antenv
-         source antenv/bin/activate
-         python -m pip install --upgrade pip
-         pip install setup
-         pip install -r requirements.txt
-       workingDirectory: $(projectRoot)
-       displayName: "Install requirements"
-    - task: ArchiveFiles@2
-   inputs:
-     rootFolderOrFile: '$(Build.SourcesDirectory)'
-     includeRootFolder: false
-     archiveType: 'zip'
-     archiveFile: '$(Build.ArtifactStagingDirectory)/Application$(Build.BuildId).zip'
-     replaceExistingArchive: true
-     verbose: # (no value); this input is optional
-- publish: $(Build.ArtifactStagingDirectory)/Application$(Build.BuildId).zip
-   displayName: 'Upload package'
-   artifact: drop
+- task: UsePythonVersion@0
+  inputs:
+    versionSpec: '$(python.version)'
+  displayName: 'Use Python $(python.version)'
 
-jobs:
-- deployment: DeploymentJob
-pool:
-  vmImage: $(vmImageName)
-environment: $(environmentName)
-strategy:
-  runOnce:
-    deploy:
-      steps:
+- script: |
+    python -m pip install --upgrade pip
+    pip install -r requirements.txt
+  displayName: 'Install dependencies'
 
-      - task: UsePythonVersion@0
-        inputs:
-          versionSpec: '$(pythonVersion)'
-        displayName: 'Use Python version'
-
-      - task: AzureWebApp@1
-        displayName: 'Deploy Azure Web App : {{ webAppName }}'
-        inputs:
-          azureSubscription: $(azureServiceConnectionId)
-          appName: $(webAppName)
-          package: $(Pipeline.Workspace)/drop/$(Build.BuildId).zip
-
-          # The following parameter is specific to the Flask example code. You may
-          # or may not need a startup command for your app.
-
-          startUpCommand: 'gunicorn --bind=0.0.0.0 --workers=4 startup:app'
+- script: |
+    pip install pytest pytest-azurepipelines
+    pytest
+  displayName: 'pytest'
