--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,9 +21,17 @@ strategy:
 
 steps:
 - task: UsePythonVersion@0
-  inputs:
-    versionSpec: '$(python.version)'
-  displayName: 'Use Python $(python.version)'
+       inputs:
+         versionSpec: '$(pythonVersion)'
+         displayName: 'Use Python $(pythonVersion)'
+    - script: |
+         python -m venv antenv
+         source antenv/bin/activate
+         python -m pip install --upgrade pip
+         pip install setup
+         pip install -r requirements.txt
+       workingDirectory: $(projectRoot)
+       displayName: "Install requirements"
 
 - script: |
     python -m pip install --upgrade pip
