--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,38 +7,46 @@ trigger:
 - master
 
 pool:
-  vmImage: 'ubuntu-latest'
+  vmImage: $(vmImageName)
+  environment: $(environmentName)
+
 strategy:
-  matrix:
-    Python27:
-      python.version: '2.7'
-    Python35:
-      python.version: '3.5'
-    Python36:
-      python.version: '3.6'
-    Python37:
-      python.version: '3.7'
+  runOnce:
+    deploy:
+      steps:
+
+    - task: UsePythonVersion@0
+      inputs: 
+      
 
 steps:
 - task: UsePythonVersion@0
-       inputs:
-         versionSpec: '$(pythonVersion)'
-         displayName: 'Use Python $(pythonVersion)'
-    - script: |
-         python -m venv antenv
-         source antenv/bin/activate
-         python -m pip install --upgrade pip
-         pip install setup
-         pip install -r requirements.txt
-       workingDirectory: $(projectRoot)
-       displayName: "Install requirements"
+  inputs:
+    versionSpec: '$(python.version)'
+  displayName: 'Use Python $(python.version)'
 
 - script: |
+    python -m venv antenv
+    source antenv/bin/activate
     python -m pip install --upgrade pip
+    pip install setup
     pip install -r requirements.txt
+  workingDirectory: $(projectRoot)
   displayName: 'Install dependencies'
 
-- script: |
-    pip install pytest pytest-azurepipelines
-    pytest
-  displayName: 'pytest'
+- task: ArchiveFiles@2
+  inputs:
+    rootFolderOrFile: '$(Build.SourcesDirectory)'
+    includeRootFolder: false
+    archiveType: 'zip'
+    archiveFile: '$(Build.ArtifactStagingDirectory)/Application$(Build.BuildId).zip'
+    replaceExistingArchive: true
+    verbose: # (no value); this input is optional
+- publish: $(Build.ArtifactStagingDirectory)/Application$(Build.BuildId).zip
+  displayName: 'Upload package'
+  artifact: drop
+
+jobs:
+  - deployment: DeploymentJob
+
+pool
